fix : 비밀번호 재설정 교정

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -47,6 +47,12 @@
     max-width: 400px;
 }
 
+.changePwdForm {
+    margin-top:56px;
+    height:176px;
+    margin-bottom:30px;
+}
+
 .inputGroup {
     width: 400px;
     height: auto;
