--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -57,8 +57,7 @@
 }
 
 .listContainer {
-    width: 36%;
-    height: 88vh;
+    width: 570px;
 }
 
 .searchContainer {
@@ -68,12 +67,20 @@
 }
 
 .input {
-    background-color: #ffffff;
     padding: 11px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
     flex: 1;
-    min-width: 100px;
+    color: #555;
+    font-family: NOto Sans KR, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 145%; /* 20.3px */
+    width: 482px!important;
+    height: 55px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #D9D9D9;
+    background: #FFF;
 }
 
 .searchButton {
@@ -84,16 +91,19 @@
     cursor: pointer;
     display: inline-flex;
     flex-shrink: 0;
-    width: 79px;
-    height: 50px;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    font-size: 20px;
     font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    padding: 8px 20px;
+    font-family: NOto Sans KR, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 140%; /* 22.4px */
+    width: 79px;
+    height: 55px;
+    padding: 16px 22px;
+    align-items: center;
+    gap: 10px;
 }
 
 .placeList {
@@ -106,26 +116,24 @@
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #ffffff;
     transition: box-shadow 0.3s ease;
-    width: 650px;
-    height: 120px;
     margin-bottom: 7px;
-    border-radius: 10px 0px;
     padding: 7px;
     border: 1px solid #e8e8e8;
-    box-shadow: 4px 4px 24px 0px rgba(217, 217, 217, 0.57);
     cursor: pointer;
-}
+    width: 570px;
+    height: 120px;
+    flex-shrink: 0;
+    border-radius: 10px 0;
+    background: #FFF;
+    box-shadow: 4px 4px 24px 0 rgba(217, 217, 217, 0.57);
 
-.placeItem:hover {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .placeThumbnail {
     margin-right: 20px;
-    width: 85px;
-    height: 85px;
+    width: 95px;
+    height: 95px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -136,9 +144,9 @@
 
 .thumbnailImage {
     border-radius: 8px;
-    width: 85px;
-    height: 85px;
-    padding: 5px;
+    width: 95px;
+    height: 95px;
+    /*padding: 5px;*/
     object-fit: cover;
 }
 
@@ -161,16 +169,18 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    height: 90px;
+    /*background: red;*/
 }
 
 .placeName {
     color: #2c2c2c;
     font-size: 14px;
     font-style: normal;
-    line-height: normal;
     font-weight: 505;
     font-family: 'Noto Sans KR', sans-serif;
     margin-top: 10px;
+    line-height: 145%; /* 20.3px */
 }
 
 .placeAddress,
@@ -180,14 +190,21 @@
     font-size: 12px;
     font-style: normal;
     font-weight: 300;
-    line-height: normal;
     padding-bottom: 7px;
+    font-family: NOto Sans KR, sans-serif;
+    line-height: 150%; /* 18px */
 }
 
 .placeDetailAddress {
     display: flex;
     align-items: center;
     padding: 0;
+    color: #868686;
+    font-family: NOto Sans KR, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 150%; /* 18px */
 }
 
 .bookmarkButton {
@@ -210,8 +227,12 @@
     display: flex;
     justify-content: flex-end;
     gap: 10px;
-    color: #555;
-    font-size: 14px;
+    color: #868686;
+    font-family: NOto Sans KR, sans-serif;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 150%; /* 15px */
 }
 
 .mapContainer {
@@ -314,7 +335,7 @@
     align-items: center;
     color: #000;
     font-size: 25px;
-    height:30px;
+    height: 30px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -431,7 +452,7 @@
     color: #848282;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 14px;
-    height:17px;
+    height: 17px;
     font-weight: 500;
     margin-top: 5px;
     text-align: left;
@@ -512,7 +533,7 @@
 
 .countryCityDistrict {
     color: #636363;
-    height:19px;
+    height: 19px;
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
@@ -523,12 +544,12 @@
 
 .detailplaceName {
     color: #000;
-    height:46px;
+    height: 46px;
     font-size: 38px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top:20px;
+    margin-top: 20px;
     font-family: 'Noto Sans KR', sans-serif;
 }
 
