--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -340,7 +340,7 @@
     font-size: 26px;
     font-weight: 400;
     line-height: 120%; /* 31.2px */
-    margin-left:70px;
+    margin-left:262px;
 }
 
 .detailTitleIcon {
@@ -538,7 +538,6 @@
     font-weight: 300;
     margin-bottom: 10px;
     font-family: 'Noto Sans KR', sans-serif;
-    text-align: center;
     line-height: 140%; /* 22.4px */
 }
 
@@ -548,7 +547,6 @@
     font-style: normal;
     margin-top: 20px;
     font-family: 'Noto Sans KR', sans-serif;
-    text-align: center;
     font-size: 32px;
     font-weight: 400;
     line-height: 120%; /* 38.4px */
@@ -613,12 +611,13 @@
 
 .homepageLabel a {
     color: #00f;
-    font-size: 20px;
     font-style: normal;
     font-weight: 300;
-    line-height: normal;
     text-decoration: none;
     font-family: 'Noto Sans KR', sans-serif;
+    font-size: 18px;
+    line-height: 180%; /* 32.4px */
+
 }
 
 .buttonContainer {
