--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top:28px;
     padding: 20px;
     gap: 5px;
 }
